--- a/files/Css/cssStyles.css
+++ b/files/Css/cssStyles.css
@@ -2,7 +2,7 @@ body{
     background-color: #a6b8b8;
 }
 p{
-    background-color: cadetblue;
+    background-color: #89f1f4;
     font-size: 20px;
     font-family: "Comic Sans MS";
 }
