--- a/files/Css/cssStyles.css
+++ b/files/Css/cssStyles.css
@@ -1,8 +1,58 @@
-body{
-    background-color: #a6b8b8;
+/*body{*/
+/*    background-color: #a6b8b8;*/
+/*}*/
+/*p{*/
+/*    background-color: #89f1f4;*/
+/*    font-size: 20px;*/
+/*    font-family: "Comic Sans MS";*/
+/*}*/
+/*.class1{*/
+/*    background-color: #CCD3CA;*/
+/*    font-size: 20px;*/
+/*    font-family: "FangSong";*/
+/*    color: forestgreen;*/
+/*}*/
+/*ident{*/
+/*    background-color: #95df80;*/
+/*}*/
+/*#submit{*/
+/*    background-color: #95df80;*/
+.btn1 {
+    background-color: #053e75;
+    font-size: 25px;
 }
-p{
-    background-color: #89f1f4;
-    font-size: 20px;
-    font-family: "Comic Sans MS";
+
+.btn1:hover {
+    background-color: #65686b;
+    font-size: 25px;
+}
+
+.btnFont {
+    font-family: OpenSymbol;
+}
+
+
+/* CSS */
+.button-33 {
+    background-color: #c2fbd7;
+    border-radius: 100px;
+    box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset, rgba(44, 187, 99, .15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(44, 187, 99, .15) 0 4px 8px, rgba(44, 187, 99, .15) 0 8px 16px, rgba(44, 187, 99, .15) 0 16px 32px;
+    color: green;
+    cursor: pointer;
+    display: inline-block;
+    font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+    padding: 7px 20px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 250ms;
+    border: 0;
+    font-size: 16px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-33:hover {
+    box-shadow: rgba(44, 187, 99, .35) 0 -25px 18px -14px inset, rgba(44, 187, 99, .25) 0 1px 2px, rgba(44, 187, 99, .25) 0 2px 4px, rgba(44, 187, 99, .25) 0 4px 8px, rgba(44, 187, 99, .25) 0 8px 16px, rgba(44, 187, 99, .25) 0 16px 32px;
+    transform: scale(1.05) rotate(-1deg);
 }
